1. [Remove]移除sigslot.h以及相关代码 2. [Add]使用std::function替代sigslot相关部分的代码 3. [Note]未经过充分的验证

--- a/examples/CommNoGui/Makefile
+++ b/examples/CommNoGui/Makefile
@@ -7,12 +7,12 @@ INC_DIR= -I${SRC_DIR}
 
 
 SRC =   ${DEMO_DIR}/CSerialPortDemoNoGui.cpp \
-        ${SRC_DIR}/SerialPortInfo.cpp \
-	${SRC_DIR}/SerialPortInfoBase.cpp \
-      	${SRC_DIR}/SerialPortInfoUnixBase.cpp \
-	${SRC_DIR}/SerialPort.cpp \
-	${SRC_DIR}/SerialPortBase.cpp \
-	${SRC_DIR}/SerialPortUnixBase.cpp \
+    #     ${SRC_DIR}/SerialPortInfo.cpp \
+	# ${SRC_DIR}/SerialPortInfoBase.cpp \
+    #   	${SRC_DIR}/SerialPortInfoUnixBase.cpp \
+	# ${SRC_DIR}/SerialPort.cpp \
+	# ${SRC_DIR}/SerialPortBase.cpp \
+	# ${SRC_DIR}/SerialPortUnixBase.cpp \
 
 OBJ = ${SRC}
 
